# 3d-ice-sys

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs  index.html  search-index.js
src/: analysis.rs  channel.rs  die.rs  die_list.rs  dimensions.rs  floorplan.rs  floorplan_element.rs  floorplan_element_list.rs  floorplan_matrix.rs  heat_sink.rs  ic_element.rs  ic_element_list.rs  inspection_point.rs  inspection_point_list.rs  layer.rs  layer_list.rs  lib.rs  material.rs  material_list.rs  output.rs  power_grid.rs  powers_queue.rs  stack_description.rs  stack_element.rs  stack_element_list.rs  stack_file_parser.rs  system_matrix.rs  thermal_data.rs  thermal_grid.rs  types.rs
superlu_sys/: enum.Dtype_t.html  enum.IterRefine_t.html  enum.Mtype_t.html  enum.Stype_t.html  enum.colperm_t.html  enum.fact_t.html  enum.milu_t.html  enum.norm_t.html  enum.rowperm_t.html  enum.trans_t.html  enum.yes_no_t.html  struct.NCformat.html  struct.SuperLUStat_t.html  struct.SuperMatrix.html  struct.superlu_options_t.html
tests/: lib.rs  test_emulator.rs  test_invalid.rs  test_stack.rs  test_system_matrix.rs  test_system_vector.rs
threed_ice_sys/: enum.AnalysisType_t.html  enum.ChannelModel_t.html  enum.Error_t.html  enum.HeatSinkModel_t.html  enum.OutputInstant_t.html  enum.OutputQuantity_t.html  enum.OutputType_t.html  enum.SimResult_t.html  enum.StackElementType_t.html  enum.StackLayerType_t.html  fn.analysis_destroy.html  fn.analysis_init.html  fn.emulate_step.html  fn.fill_power_grid.html  fn.fill_sources_floorplan.html  fn.fill_system_matrix.html  fn.fill_thermal_grid.html  fn.floorplan_matrix_multiply.html  fn.get_capacity.html  (+86 more)
(+47 files in other folders)
