[package]
name = "threed-ice-sys"
version = "0.2.6"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/3d-ice-sys"
homepage = "https://github.com/markov-chain/3d-ice-sys"
documentation = "https://markov-chain.github.io/3d-ice-sys"
description = "The package provides bindings to 3D-ICE."
build = "build.rs"
links = "threed-ice"

[dependencies]
libc = "0.2"
superlu-sys = "0.2"

[dev-dependencies]
assert = "0.6"
fixture = "0.2"
temporary = "0.5"
