[package]
name = "threed-ice-sys"
version = "0.2.7"
license = "MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to 3D-ICE."
documentation = "https://markov-chain.github.io/3d-ice-sys"
homepage = "https://github.com/markov-chain/3d-ice-sys"
repository = "https://github.com/markov-chain/3d-ice-sys"
build = "build.rs"
links = "threed-ice"

[dependencies]
libc = "0.2"
superlu-sys = "0.3"

[dev-dependencies]
assert = "0.7"
fixture = "0.3"
temporary = "0.6"
